# places-api

./: .dockerignore  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  gunicorn.ini  manage.py  pyproject.toml  setup.cfg
.github/workflows/: development.yml
compose/: entrypoint  nginx.conf  post-build  start-prod
config/: debug_urls.py  urls.py
config/settings/: __init__.py  development.py  production.py  testing.py
config/settings/components/: __init__.py  common.py  databases.py  logging.py  preferences.py  providers.py  rest_framework.py
fixtures/: email_addresses.json  phone_numbers.json  users.json
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
src/: urls.py
src/auth/application/pending_actions/: presenters.py  responses.py
src/auth/application/pending_actions/handlers/: get_email_verification.py  get_phone_verification.py
src/auth/application/pending_actions/use_cases/: action_exchanger.py  stream_finder.py  url_builder.py
src/auth/application/pictures/: presenters.py  responses.py
src/auth/application/pictures/use_cases/: creator.py  deleter.py  lister.py
src/auth/application/reset_password/use_cases/: performer.py  requester.py
src/auth/application/sessions/: responses.py
src/auth/application/sessions/use_cases/: mixins.py  session_builder.py  user_register.py
src/auth/domain/: __init__.py  exceptions.py  session_tenant.py  value_objects.py
src/auth/domain/interfaces/: token_path_finder.py
src/auth/domain/repositories/: __init__.py  pending_action.py  session.py  session_user.py
src/auth/infrastructure/: bus_wiring.py  jwt_token_builder.py
src/auth/infrastructure/builders/: callback_url.py
src/auth/infrastructure/repositories/: __init__.py  orm_pending_action.py  orm_session.py  orm_session_user.py
src/auth/management/commands/: touch_superuser.py
src/auth/presentation/: app.py  forms.py  helpers.py  selectors.py  urls.py
src/auth/presentation/api/: login.py  picture.py  register.py  reset_password.py
src/auth/presentation/api/pending_actions/: email_verification.py  exchangers.py  phone_verification.py
src/auth/presentation/streams/: pending_action.py
src/auth/presentation/validators/: login.py  pending_action.py  picture.py  reset_password.py  session_user.py  verify_email.py
src/common/: constants.py
src/common/application/: helpers.py
src/common/application/commands/: common.py  users.py
src/common/application/helpers/: time.py
src/common/application/mixins/: tenant.py
src/common/application/presenters/: user.py
src/common/application/queries/: auth.py  users.py
src/common/application/responses/: generics.py
src/common/database/: app.py
src/common/database/admin/: __init__.py  email_address.py  pending_action.py  phone_number.py  user.py  widgets.py
src/common/database/migrations/: 0001_initial.py
src/common/database/models/: __init__.py  email_address.py  pending_action.py  phone_number.py  user.py
src/common/database/models/factories/: email_address.py  pending_action.py  phone_number.py  user.py
src/common/database/models/mixins/: common.py  users.py
src/common/domain/: __init__.py  events.py  value_objects.py
src/common/domain/constants/: payments.py
src/common/domain/context/: bus.py  domain.py  locale.py
src/common/domain/entities/: email_address.py  pending_action.py  phone_number.py  user.py  user_session.py
src/common/domain/enums/: auth.py  common.py  config.py  enrollments.py  locales.py  users.py
src/common/domain/exceptions/: auth.py  common.py  users.py
src/common/domain/interfaces/: cache_store.py  entities.py  faker.py  locales.py  responses.py  services.py
src/common/domain/messaging/: async_tasks.py  commands.py  events.py  queries.py
src/common/domain/respositories/: picture.py
src/common/helpers/: class_.py  dicts.py  enconding.py  expects.py  hostnames.py  pagination.py  paths.py  requests.py  string.py  time.py
src/common/infrastructure/: context_builder.py  django_locales.py  mem_cache_store.py  query_params.py  storage_backends.py  time_formatter.py
src/common/infrastructure/builders/: email_address.py  pending_action.py  phone_number.py  user.py
src/common/infrastructure/context/: bus_singleton.py  domain_singleton.py  mock_bus_singleton.py  mock_domain_singleton.py
src/common/infrastructure/messaging/: __init__.py  _exceptions.py  fake_command_bus.py  memory_command_bus.py  memory_event_bus.py  memory_query_bus.py  sqs_task_scheduler.py
src/common/presentation/: app.py  auth_backends.py  constants.py  context_processors.py  email.py  middleware.py  parsers.py  renderers.py
src/common/presentation/api/: __init__.py  domain_api.py  mixins.py  pagination.py  permissions.py  renderers.py  rest_fields.py  serializers.py  validators.py  viewsets.py
src/common/presentation/utils/: admin_widgets.py  casts.py  dates.py  email.py  files.py  images.py  strings.py  tenant.py
src/common/presentation/views/: errors.py  healthcheck.py  stream_view.py  transaction_view.py
src/places/application/: presenters.py  responses.py  use_cases.py
src/places/domain/: aggregates.py  enums.py  exceptions.py  services.py
src/places/domain/entities/: day_forecast.py  place.py
src/places/domain/services/: forecast.py  place.py
src/places/infrastructure/: http_services.py
src/places/infrastructure/services/: http_cached_forecast.py  http_forecast.py  http_place.py
src/places/presentation/: urls.py
src/places/presentation/api/: places.py
tests/: conftest.py
tests/fixtures/: api.py  orm.py  wiring.py
tests/src/: conftest.py
tests/src/auth/: conftest.py
tests/src/auth/presentation/: conftest.py
tests/src/common/: conftest.py  test_utils.py
tests/src/common/database/: conftest.py
tests/src/common/presentation/: conftest.py
web/templates/: home.html  robots.txt
web/templates/admin/: base_site.html  editor_field.html
web/templates/errors/: 400.html  403.html  404.html  500.html  _base.html
(+32 files in other folders)
